force-app/main/default/objects/FSM_SendProductConsumedUpdates__e/FSM_SendProductConsumedUpdates__e.object-meta.xml
<CustomObject>
    <description>SFI-667</description>
    <label>Send Product Consumed Update</label>
    <pluralLabel>Send Product Consumed Updates</pluralLabel>
</CustomObject>