force-app/main/default/objects/FSM_SendProductConsumedUpdates__e/fields/FSM_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExternalID__c</fullName>
    <description>SFI-667</description>
    <label>Work Order External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>