force-app/main/default/objects/FSM_SendProductConsumedUpdates__e/fields/FSM_LocationName__c.field-meta.xml
<CustomField>
    <fullName>FSM_LocationName__c</fullName>
    <description>SFI-1528</description>
    <label>Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>