force-app/main/default/objects/FSM_SendProductConsumedUpdates__e/fields/FSM_OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_OrderNumber__c</fullName>
    <description>SFI-667</description>
    <label>Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>