force-app/main/default/objects/FSM_SendProductConsumedUpdates__e/fields/FSM_ProductExternalID__c.field-meta.xml
<CustomField>
    <fullName>FSM_ProductExternalID__c</fullName>
    <description>SFI-667</description>
    <label>Product External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>