force-app/main/default/objects/FSM_SendProductConsumedUpdates__e/fields/FSM_QuantityConsumed__c.field-meta.xml
<CustomField>
    <fullName>FSM_QuantityConsumed__c</fullName>
    <description>SFI-667</description>
    <label>Quantity Consumed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>