force-app/main/default/objects/FSM_SendProductConsumedUpdates__e/fields/FSM_RecipientName__c.field-meta.xml
<CustomField>
    <fullName>FSM_RecipientName__c</fullName>
    <description>SFI-1528</description>
    <label>Recipient Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>